--- a/element-search/menu/task.html
+++ b/element-search/menu/task.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Menu</title>
     <link rel="stylesheet" href="task.css">
     <link rel="stylesheet" href="../../assets/css/style.css" />
 </head>
+
 <body>
     <header class="header">
         <div class="logo__container">
-          <a href="https://netology.ru/" class="logo__link"></a>
+            <a href="https://netology.ru/" class="logo__link"></a>
         </div>
         <h1 class="header__title">
             Домашнее задание к занятию 1.2 «Способы поиска нужного HTML-элемента». Навигационное меню.
@@ -24,7 +25,7 @@
         </li>
         <li class="menu__item">
             <a href="" class="menu__link">О компании</a>
-            <ul class="menu menu_sub">
+            <ul class="menu menu_sub menu_active">
                 <li class="menu__item">
                     <a href="https://netology.ru/clients" class="menu__link">Клиенты</a>
                 </li>
@@ -53,4 +54,5 @@
     </ul>
     <script src="task.js"></script>
 </body>
+
 </html>
